<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <include android:id="@+id/action_bar"
        layout="@layout/actionbar_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_content_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top|center_horizontal"
        android:gravity="center"
        android:layout_marginTop="36dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="16dp">

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:text="@string/message_loading_backup_files"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressbar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:indicatorTrackGapSize="0dp"
            app:trackColor="?attr/colorPrimaryContainer"
            app:trackCornerRadius="24dp"
            app:indicatorColor="?attr/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/message_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            tools:text="backup_2025-02-15.json"
            app:layout_constraintTop_toBottomOf="@id/progressbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintGuide_percent=".5"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="@style/Widget.Material3.Button.TextButton"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/label_cancel"
            app:layout_constraintTop_toBottomOf="@id/message_result"
            app:layout_constraintEnd_toEndOf="@id/guideline"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/label_restore"
            app:layout_constraintTop_toBottomOf="@id/message_result"
            app:layout_constraintStart_toStartOf="@id/guideline"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="btn_restore,btn_cancel,message_result"
            android:visibility="gone"
            tools:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>