<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/action_bar"
        layout="@layout/actionbar_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/label_backup_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="?android:attr/textColorSecondary"
            android:text="@string/description_backup_settings"/>

        <TextView
            android:id="@+id/label_last_local_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_backup_settings"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:textColor="?android:attr/textColorSecondary"
            tools:text="Local Backup: 12/05/2025 12:20 AM"/>

        <FrameLayout
            android:id="@+id/container_backup_button_and_backup_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/label_last_local_backup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_start_backup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/label_start_backup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_backup_settings"
                tools:visibility="visible"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_backup_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/backup_progress_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                    tools:text="backup accounts in progress"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_cancel_backup"
                    app:layout_constraintHorizontal_bias="0"/>

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/backup_progressbar"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    app:indicatorTrackGapSize="0dp"
                    app:trackColor="?attr/colorPrimaryContainer"
                    app:trackCornerRadius="24dp"
                    app:indicatorColor="?attr/colorPrimary"
                    app:layout_constraintTop_toBottomOf="@id/backup_progress_message"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_cancel_backup" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel_backup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Button.IconButton"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
                    app:icon="@drawable/baseline_close"
                    app:iconSize="20dp"
                    app:iconTint="?attr/colorOnBackground"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/backup_progressbar"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/label_auto_backup_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/auto_backup_frequency"
            app:layout_constraintBottom_toBottomOf="@id/auto_backup_frequency"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textStyle="bold"
            android:text="@string/label_auto_backup"/>

        <Spinner
            android:id="@+id/auto_backup_frequency"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:spinnerMode="dialog"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toBottomOf="@id/container_backup_button_and_backup_progress"
            app:layout_constraintStart_toEndOf="@id/label_auto_backup_frequency"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/auto_backup_frequency" />

        <TextView
            android:id="@+id/label_restore_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="@id/divider1"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:text="@string/description_restore_settings"/>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/label_restore_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_open_restore_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/label_open_restore_local"
                android:visibility="visible"/>

            <LinearLayout
                android:id="@+id/layout_restore_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/restore_progress_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_cancel_backup"
                    app:layout_constraintHorizontal_bias="0"
                    tools:text="restoring from backup.json"/>

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/restore_progressbar"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    app:indicatorTrackGapSize="0dp"
                    app:trackColor="?attr/colorPrimaryContainer"
                    app:trackCornerRadius="24dp"
                    app:indicatorColor="?attr/colorPrimary"
                    app:layout_constraintTop_toBottomOf="@id/backup_progress_message"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_cancel_backup" />
            </LinearLayout>
        </FrameLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>